--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,20 +1,6 @@
-<%= form_with model: @post do |form| %>
+ 
+<h1>New Post</h1>
 
-<% if @user.errors.any? %>
-  <div id="error_explanation">
-    <h2><%= pluralize(@post.errors.count, "error") %> prohibited this post from being created:</h2>
+<%= render 'form', post: @post %>
 
-    <ul>
-      <% @post.errors.each do |error| %>
-        <li><%= error.full_message %></li>
-      <% end %>
-    </ul>
-  </div>
-<% end %>
-
-  <%= form.label :title, "Title: " %>
-  <%= form.text_field :title %>
-  <%= form.label :body, "Body: " %>
-  <%= form.text_area :body %>
-
-<% end %>
+<%= link_to 'Back', posts_path %>
