Apply bootstrap styles

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -11,10 +11,11 @@
 </div>
 <% end %>
 
+<div class="container">
 <div class="form-group d-flex justify-content-center align-items-center">
-  
-  <%= form.text_area :body, autofocus: true, class: "form-control col-6" %>
-  <%= form.button 'Create Post', class: "btn btn-primary p-3 ml-4" %>
+  <%= form.text_area :body, autofocus: true, class: "form-control" %>
+  <%= form.button 'Create Post', class: "btn btn-primary p-2 ms-4" %>
+</div>
 </div>
 
 <% end %>
