Edit ReadMe file

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,7 +7,7 @@
 <% else %>
 
 <main role="main" class="inner cover my-5 container">
-  <h1 class="cover-heading">Welcome to the Members Only</h1>
+  <h1 class="cover-heading">Welcome to the Members Only App</h1>
   <p class="lead">This is an exclusive clubhouse where members can write anonymous posts. Inside the clubhouse, members can see who the author of a post is but, outside, they can only see the story and wonder who wrote it. So <em>Sign up</em> or <em>Sign In</em> to create a post!</p>
   <p class="lead">
     <%= link_to 'Create Post', new_post_path, class: "btn btn-lg btn-secondary" %>
